# mlops_modulo6

./: Dockerfile  README.md
modelserver/: pyproject.toml
modelserver/modelserver/: api.py
